@@ -29,6 +29,7 @@ Changes:
 - Add ability to import software raid disks. (except vinum)
 - Add ability to import single disks. (detect ZFS/UFS/NTFS only)
 - Add ability to configure multiple iSCSI LUNs. (disk type only)
+- Add ability to configure multiple portal/initiator group.
 - Add ability to edit power mode and CPU frequency.
 - Add ability to edit write cache mode on iSCSI target.
 - Add ability to edit upload directory of webserver.
